--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ go:
 before_install:
   - go get github.com/mattn/goveralls
 script:
+  - diff -u <(echo -n) <(gofmt -d .)
   - ./gen-coverage.sh coverage.out
   - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
